antlr_build/grammarYaplParser.py
# Generated from antlr_build/grammarYapl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarYaplParser ( Parser ):

    grammarFileName = "grammarYapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'|'", "'self'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'let'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", 
                     "','", "'.'", "'~'", "'@'", "'*'", "'/'", "'+'", "'-'", 
                     "'<='", "'<'", "'='", "'++'", "'--'", "'=*'", "'=/'", 
                     "'=+'", "'=-'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", "ISVOID", 
                      "LOOP", "POOL", "THEN", "WHILE", "NEW", "NOT", "LET", 
                      "TYPE_ID", "OBJECT_ID", "INTEGER", "BOOL", "STRING", 
                      "WHITESPACE", "NEWLINE", "COMMENT", "COMMENT_BLOCK", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "COLON", "SEMICOLON", "COMMA", "DOT", 
                      "NEG", "AT", "MULT", "DIV", "PLUS", "MINUS", "LE", 
                      "LT", "EQ", "INCR", "DECR", "ASSIGN_MULT", "ASSIGN_DIV", 
                      "ASSIGN_PLUS", "ASSIGN_MINUS", "ASSIGN" ]

    RULE_program = 0
    RULE_class_def = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "class_def", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    CLASS=4
    ELSE=5
    FI=6
    IF=7
    IN=8
    INHERITS=9
    ISVOID=10
    LOOP=11
    POOL=12
    THEN=13
    WHILE=14
    NEW=15
    NOT=16
    LET=17
    TYPE_ID=18
    OBJECT_ID=19
    INTEGER=20
    BOOL=21
    STRING=22
    WHITESPACE=23
    NEWLINE=24
    COMMENT=25
    COMMENT_BLOCK=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    LBRACKET=31
    RBRACKET=32
    COLON=33
    SEMICOLON=34
    COMMA=35
    DOT=36
    NEG=37
    AT=38
    MULT=39
    DIV=40
    PLUS=41
    MINUS=42
    LE=43
    LT=44
    EQ=45
    INCR=46
    DECR=47
    ASSIGN_MULT=48
    ASSIGN_DIV=49
    ASSIGN_PLUS=50
    ASSIGN_MINUS=51
    ASSIGN=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.Class_defContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.Class_defContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.SEMICOLON)
            else:
                return self.getToken(grammarYaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return grammarYaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = grammarYaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.class_def()
                self.state = 11
                self.match(grammarYaplParser.SEMICOLON)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(grammarYaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.TYPE_ID)
            else:
                return self.getToken(grammarYaplParser.TYPE_ID, i)

        def LBRACE(self):
            return self.getToken(grammarYaplParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(grammarYaplParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(grammarYaplParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.FeatureContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.SEMICOLON)
            else:
                return self.getToken(grammarYaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return grammarYaplParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_def" ):
                return visitor.visitClass_def(self)
            else:
                return visitor.visitChildren(self)




    def class_def(self):

        localctx = grammarYaplParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(grammarYaplParser.CLASS)
            self.state = 18
            self.match(grammarYaplParser.TYPE_ID)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 19
                self.match(grammarYaplParser.INHERITS)
                self.state = 20
                self.match(grammarYaplParser.TYPE_ID)


            self.state = 23
            self.match(grammarYaplParser.LBRACE)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18 or _la==19:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(grammarYaplParser.SEMICOLON)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(grammarYaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarYaplParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)
        def COLON(self):
            return self.getToken(grammarYaplParser.COLON, 0)
        def TYPE_ID(self):
            return self.getToken(grammarYaplParser.TYPE_ID, 0)
        def LBRACE(self):
            return self.getToken(grammarYaplParser.LBRACE, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYaplParser.ExprContext,0)

        def RBRACE(self):
            return self.getToken(grammarYaplParser.RBRACE, 0)
        def LPAREN(self):
            return self.getToken(grammarYaplParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(grammarYaplParser.RPAREN, 0)
        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.FormalContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.COMMA)
            else:
                return self.getToken(grammarYaplParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)


    class AttributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(grammarYaplParser.COLON, 0)
        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.TYPE_ID)
            else:
                return self.getToken(grammarYaplParser.TYPE_ID, i)
        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)
        def ASSIGN(self):
            return self.getToken(grammarYaplParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = grammarYaplParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = grammarYaplParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(grammarYaplParser.OBJECT_ID)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27:
                    self.state = 35
                    self.match(grammarYaplParser.LPAREN)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==19:
                        self.state = 36
                        self.formal()
                        self.state = 41
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==35:
                            self.state = 37
                            self.match(grammarYaplParser.COMMA)
                            self.state = 38
                            self.formal()
                            self.state = 43
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)



                    self.state = 46
                    self.match(grammarYaplParser.RPAREN)


                self.state = 49
                self.match(grammarYaplParser.COLON)
                self.state = 50
                self.match(grammarYaplParser.TYPE_ID)
                self.state = 51
                self.match(grammarYaplParser.LBRACE)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(grammarYaplParser.RBRACE)
                pass

            elif la_ == 2:
                localctx = grammarYaplParser.AttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==18 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.match(grammarYaplParser.COLON)
                self.state = 57
                self.match(grammarYaplParser.TYPE_ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==52:
                    self.state = 58
                    self.match(grammarYaplParser.ASSIGN)
                    self.state = 59
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(grammarYaplParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(grammarYaplParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return grammarYaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = grammarYaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(grammarYaplParser.OBJECT_ID)
            self.state = 65
            self.match(grammarYaplParser.COLON)
            self.state = 66
            self.match(grammarYaplParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarYaplParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NewContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(grammarYaplParser.NEW, 0)
        def TYPE_ID(self):
            return self.getToken(grammarYaplParser.TYPE_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew" ):
                listener.enterNew(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew" ):
                listener.exitNew(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNew" ):
                return visitor.visitNew(self)
            else:
                return visitor.visitChildren(self)


    class MinusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(grammarYaplParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinus" ):
                return visitor.visitMinus(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)

        def LE(self):
            return self.getToken(grammarYaplParser.LE, 0)
        def LT(self):
            return self.getToken(grammarYaplParser.LT, 0)
        def EQ(self):
            return self.getToken(grammarYaplParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class DispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)

        def DOT(self):
            return self.getToken(grammarYaplParser.DOT, 0)
        def LPAREN(self):
            return self.getToken(grammarYaplParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(grammarYaplParser.RPAREN, 0)
        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.TYPE_ID)
            else:
                return self.getToken(grammarYaplParser.TYPE_ID, i)
        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)
        def AT(self):
            return self.getToken(grammarYaplParser.AT, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.COMMA)
            else:
                return self.getToken(grammarYaplParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDispatch" ):
                listener.enterDispatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDispatch" ):
                listener.exitDispatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDispatch" ):
                return visitor.visitDispatch(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(grammarYaplParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(grammarYaplParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class IsvoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(grammarYaplParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsvoid" ):
                listener.enterIsvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsvoid" ):
                listener.exitIsvoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsvoid" ):
                return visitor.visitIsvoid(self)
            else:
                return visitor.visitChildren(self)


    class Type_idContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_ID(self):
            return self.getToken(grammarYaplParser.TYPE_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_id" ):
                listener.enterType_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_id" ):
                listener.exitType_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_id" ):
                return visitor.visitType_id(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(grammarYaplParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(grammarYaplParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class IntegerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(grammarYaplParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class Static_dispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(grammarYaplParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(grammarYaplParser.RPAREN, 0)
        def TYPE_ID(self):
            return self.getToken(grammarYaplParser.TYPE_ID, 0)
        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYaplParser.COMMA)
            else:
                return self.getToken(grammarYaplParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatic_dispatch" ):
                listener.enterStatic_dispatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatic_dispatch" ):
                listener.exitStatic_dispatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatic_dispatch" ):
                return visitor.visitStatic_dispatch(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(grammarYaplParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYaplParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(grammarYaplParser.LOOP, 0)
        def POOL(self):
            return self.getToken(grammarYaplParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(grammarYaplParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYaplParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(grammarYaplParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class Object_idContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(grammarYaplParser.OBJECT_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject_id" ):
                listener.enterObject_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject_id" ):
                listener.exitObject_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject_id" ):
                return visitor.visitObject_id(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExprContext):
